--- a/style.css
+++ b/style.css
@@ -11,8 +11,11 @@ body {
 }
 
 h1 {
-  font-size: 36px;
-  margin-bottom: 20px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 24px;
+  margin-bottom: 0;
   color: green;
 }
 
